<resources>
    <string name="app_name">AndroidTraining</string>
    <string name="welcome_msg">Hello Amrita!</string>
    <string name="name">Enter name</string>
    <string name="password">Enter password</string>
    <string name="login">Login</string>
    <string name="dial">Dial</string>
    <string name="alarm">Alarm</string>
    <string name="maps">Map</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="swimming">Swimming</string>
    <string name="reading">Reading</string>
    <string name="tennis">Tennis</string>
    <string name="sign_new">Sign Up</string>
    <string-array name="places_array">
        <item>Bangalore</item>
        <item>Mumbai</item>
        <item>Delhi</item>
        <item>Pune</item>
        <item>Cochin</item>
        <item>Chennai</item>
    </string-array>
    <string name="display_msg">%1$s %1$s %1$s %1$s</string>
</resources>