<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/etEnterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:hint="@string/enter_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Spinner
        android:id="@+id/places_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:entries="@array/places_array"
        app:layout_constraintTop_toBottomOf="@id/etEnterName"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        android:id="@+id/gender_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/places_spinner"
        app:layout_constraintStart_toStartOf="parent">
        <RadioButton android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/male"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/female"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/hobby_selector"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_selector">
        <CheckBox android:id="@+id/checkbox_swim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swimming"
            android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/checkbox_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reading"
            android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/checkbox_tennis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tennis"
            android:onClick="onCheckboxClicked"/>
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hobby_selector"
        android:text="@string/sign_new"
        android:onClick="onSubmitClick"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp" />

    <TextView
        android:id="@+id/tvDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/submit"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>